--- a/src/app/_styles/carousel.css
+++ b/src/app/_styles/carousel.css
@@ -15,12 +15,12 @@
 
 .embla__viewport {
   overflow: hidden;
-  border-radius: 0.5rem;
+  border-radius: 0;
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 1024px) {
   .embla__viewport {
-    border-radius: 0;
+    border-radius: 0.5rem;
   }
 }
 
